# MDS-SDM-Proj2-SalatVidal

./: KGE_Tutorial.txt  README.md  create_abox.py  create_tbox.py  create_tbox_viz.py  docker-compose.yml  main.py  publication_abox.ttl  publication_tbox.rdf  pyproject.toml  requirements.txt  triples_exploitation.tsv  triples_kge.tsv
data/: citations.csv  conference.csv  edition.csv  journal.csv  paper.csv  paper_authors.csv  researcher.csv  review.csv  volume.csv  workshop.csv
doc/: cluster_keywords_2022.csv  cluster_keywords_by_year.csv  main.aux  main.out  main.tex
doc/delivery/: 11-B1-SalatVidal.py  11-C2-SalatVidal.py  11-C3-SalatVidal.py  README.txt  utils.py
doc/img/: abox_statistics.txt
doc/tab/: model_comparison.csv
graphdb/: graphdb.properties
graphdb-data/: settings.js  users.js
graphdb-data/repositories/Publications/: config.ttl
graphdb-data/repositories/Publications/storage/: entities  entities-doc  entities.datatypes  entities.datatypes.strings  owlim.properties  pos  pos.index  post  pso  (+10 more)
graphdb-data/repositories/lock/: process
models/: model_comparison.csv
models/complex_model/: results.json
models/distmult_model/: results.json  trained_model.pkl
models/rotate_model/: results.json
models/transe_model/: results.json  trained_model.pkl
models/transe_model/training_triples/: base.pth
models/transh_model/: results.json  trained_model.pkl
src/: KGE_loader.py  create_abox.py  create_abox_stats.py  create_tbox_viz.py  kge_exploitation.py  kge_training.py  plot_rotate_symmetry.py  plot_transe_symmetry.py  queries.sql  utils.py
(+12 files in other folders)
