[project]
name = "mds-sdm-proj2-salatvidal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz==0.20.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pykeen>=1.11.1",
    "rdflib==6.3.2",
    "seaborn>=0.13.2",
    "torch>=2.2.0",
]
